--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,15 +7,9 @@ trigger:
 - master
 
 pool:
-  vmImage: Azure Pipelines
+  vmImage: ubuntu-latest
 
 steps:
-
-- script: |
-    mvn install
-    mvn build
-  displayName: 'mvn install and build'
-
 
 - task: Maven@3
   inputs:
