--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,12 @@ steps:
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
 
-- task: PublishCodeCoverageResults@2
+- task: PublishTestResults@2
   inputs:
-    summaryFileLocation: '$(System.DefaultWorkingDirectory)/target/site/jacoco/jacoco.xml'
-    pathToSources: '$(System.DefaultWorkingDirectory)/target/site/jacoco/'
+    testResultsFormat: 'JUnit'
+    testResultsFiles: '**/TEST-*.xml'
+
+- task: PublishCodeCoverageResults@1
+  inputs:
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/target/site/jacoco/*.xml'
+    pathToSources: '$(System.DefaultWorkingDirectory)/src/main/java/'
