--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,5 +29,6 @@ steps:
 
 - task: PublishCodeCoverageResults@1
   inputs:
+    codeCoverageTool: 'JaCoCo'
     summaryFileLocation: '$(System.DefaultWorkingDirectory)/target/site/jacoco/*.xml'
     pathToSources: '$(System.DefaultWorkingDirectory)/src/main/java/'
