--- a/pom.xml
+++ b/pom.xml
@@ -68,24 +68,18 @@
         </executions>
       </plugin>
       <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.7</version> <!-- Adjust the version as needed -->
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.7</version> <!-- Adjust version as needed -->
             <executions>
                 <execution>
-                    <id>prepare-agent</id>
                     <goals>
-                        <goal>prepare-agent</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>report</id>
-                    <goals>
-                        <goal>report</goal>
+                        <goal>clean</goal>
+                        <goal>cobertura</goal>
                     </goals>
                 </execution>
             </executions>
-        </plugin>
+       </plugin>
     </plugins>
   </build>
 </project>
