--- a/pom.xml
+++ b/pom.xml
@@ -68,18 +68,25 @@
         </executions>
       </plugin>
       <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>cobertura-maven-plugin</artifactId>
-            <version>2.7</version> <!-- Adjust version as needed -->
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>clean</goal>
-                        <goal>cobertura</goal>
-                    </goals>
-                </execution>
-            </executions>
-       </plugin>
+    		<groupId>org.jacoco</groupId>
+    		<artifactId>jacoco-maven-plugin</artifactId>
+    		<version>0.8.2</version>
+    		<executions>
+    			<execution>
+    				<goals>
+    					<goal>prepare-agent</goal>
+    				</goals>
+    			</execution>
+    			<!-- attached to Maven test phase -->
+    			<execution>
+    				<id>report</id>
+    				<phase>test</phase>
+    				<goals>
+    					<goal>report</goal>
+    				</goals>
+    			</execution>
+    		</executions>
+     </plugin>
     </plugins>
   </build>
 </project>
